--- a/basigninparent.html
+++ b/basigninparent.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Parent Sign In - Family Task Manager</title>
-   <link rel="stylesheet" href="bbsigninparent.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Parent Sign In - Family Task Manager</title>
+ <link rel="stylesheet" href="bbsigninparent.css">
 </head>
 <body>
-   <div class="container">
-       <div class="icon-wrapper">
-           <div class="icon">
-               <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                   d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z">
-                   </path>
-               </svg>
-           </div>
-       </div>
-
-
-       <h1>Parent Sign In</h1>
-       <p class="subtitle">Manage your family's tasks</p>
+<div class="container">
+     <div class="icon-wrapper">
+         <div class="icon">
+             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z">
+                 </path>
+             </svg>
+         </div>
+     </div>
+<h1>Parent Sign In</h1>
+    <p class="subtitle">Manage your family's tasks</p>
         <form class="signin-form" onsubmit="handleLogin(event)">
-           <div class="form-group">
-               <label for="username">Username</label>
-               <input
-                   type="text"
-                   id="username"
-                   name="username"
-                   placeholder="Enter your username"
-                   required
-               >
-           </div>
             <div class="form-group">
-               <label for="password">Password</label>
+                <label for="username">Email</label>
                <input
-                   type="password"
-                   id="password"
-                   name="password"
-                   placeholder="Enter your password"
-                   required
-               >
-           </div>
-
-
-           <button type="submit" class="btn-login">
-               Log In
-           </button>
-       </form>
-
-
-       <div class="divider"></div>
-        <div class="signup-link">
-           <p><a href="casignupparent.html">Sign up</a></p>
-       </div>
+                type="text"
+                id="username"
+                name="username"
+                placeholder="Enter your username"
+                required>
+            </div>
+            <div class="form-group">
+            <label for="password">Password</label>
+            <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Enter your password"
+                required
+             >
+            </div>
+    <button type="submit" class="btn-login"> Log In </button>
+            </form>
+            </div class="divider"></div>
+            <div class="signup-link">
+            <p><a href="casignupparent.html">Sign up</a></p>
+        </div>
         <div class="back-link">
-           <a href="aahome.html">← Back to home</a>
-       </div>
-   </div>
-   <script src="script.js"></script>
+        <a href="aahome.html">← Back to home</a>
+        </div>
+    </div>
+<script src="script.js"></script>
 </body>
 </html>
+
 
 
