--- a/dasigninchild.html
+++ b/dasigninchild.html
@@ -1,69 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Child Sign In - Family Task Manager</title>
-  <link rel="stylesheet" href="dbsigninchild.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Child Sign In - Family Task Manager</title>
+<link rel="stylesheet" href="dbsigninchild.css">
 </head>
 <body>
-   <div class="container">
-      <div class="icon-wrapper">
-          <div class="icon">
-              <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                  </path>
-              </svg>
-          </div>
-      </div>
-
-
-       <h1>Child Sign In</h1>
-      <p class="subtitle">Sign in to your family account</p>
-       <form class="signin-form" onsubmit="handleChildLogin(event)">
-          <div class="form-group">
-              <label for="familyname">Family Name</label>
-              <input
-                  type="text"
-                  id="familyname"
-                  name="familyname"
-                  placeholder="Enter your family name"
-                  required
-              >
-          </div>
-          <div class="form-group">
-              <label for="childname">Child Name</label>
-              <input
-                  type="text"
-                  id="childname"
-                  name="childname"
-                  placeholder="Enter your name"
-                  required
-              >
-          </div>
-          <div class="form-group">
-              <label for="password">Password</label>
-              <input
-                  type="password"
-                  id="password"
-                  name="password"
-                  placeholder="Enter your password"
-                  required
-              >
-          </div>
-           <button type="submit" class="btn-login">
-              Log In
-          </button>
-      </form>
-      
-       <div class="divider"></div>
-       <div class="back-link">
-           <a href="aahome.html">← Back to home</a>
+ <div class="container">
+   <div class="icon-wrapper">
+   <div class="icon">
+       <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+       d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+       </path>
+       </svg>
        </div>
-  </div>
-   <script src="script.js"></script>
+       </div>
+
+
+   <h1>Sign In</h1>
+   <p class="subtitle">Enter your member code to continue</p>
+   <form class="signin-form" onsubmit="handleMemberCodeLogin(event)">
+       <div class="form-group">
+           <label for="memberCode">Member Code</label>
+           <input
+           type="text"
+           id="memberCode"
+           name="memberCode"
+           placeholder="Enter your 6-character code"
+           maxlength="6"
+           required
+           autofocus>
+       </div>
+       <button type="submit" class="btn-login">
+            Sign In
+       </button>
+    </form>
+    <p class="error-message" id="errorMessage"></p>
+     <div class="divider"></div>
+     <div class="back-link">
+    <a href="aahome.html">← Back to home</a>
+     </div>
+</div>
+ <script src="childlogin.js"></script>
 </body>
 </html>
+
 
 
